Se reorganizaron las carpetas html y se mejoro el login, cliente y tecnico en proceso